<resources>
    <string name="app_name">Play 2048</string>
    <string name="gamename">2048</string>
    <string name="score">SCORE</string>
    <string name="bestscore">BEST</string>
    <string name="newgame">New Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="info">Join the numbers and get to the 2048 tile!</string>
    <string name="congrtas">Congratulations! You won</string>
    <string name="playagain">Play again!</string>
    <string name="gameover">Sorry! You Lost :(</string>
    <string name="instructions">Instructions</string>
    <string name="created">Created by Sushanth Avvaru</string>
    <string name="backdisplay">Go Back and Play!</string>
</resources>
